# music_app

./: .gitignore  Untitled-1.excalidraw  main.py  pyproject.toml
music_app/: manage.py
music_app/music/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
music_app/music/migrations/: 0001_initial.py  0002_initial.py  0003_alter_artist_bio.py  0004_artist_image.py  0005_alter_album_image_alter_artist_image.py  0006_track_image_playlist.py  0007_alter_playlist_image_alter_track_audio_file_and_more.py  0008_track_artist_alter_track_duration.py  0009_playlist_tracks.py  0010_playlist_is_liked_playlist_alter_playlist_title_and_more.py  0011_alter_playlist_unique_together_album_created_at_and_more.py  0012_track_create_at_alter_album_status_alter_track_album_and_more.py  0013_rename_create_at_track_created_at_album_genre_and_more.py  0014_album_in_pending_artist_status_track_in_pending_and_more.py  0015_remove_album_in_pending_remove_track_in_pending_and_more.py
music_app/music/services/: admin_services.py  services.py
music_app/music/templates/music/: album_detail.html  artist_detail.html  create_album.html  create_artist.html  create_playlist.html  create_track.html  my_playlists.html  playlist_detail.html  review_requests.html  update_playlist.html
music_app/music_app/: asgi.py  mongo.py  settings.py  urls.py  wsgi.py
music_app/music_statistics/: apps.py  models.py  services.py  urls.py  views.py
music_app/music_statistics/templates/music_statistics/: liked_artists.html  listen_history.html  music_chart.html
music_app/recommendations/: models.py
music_app/static/css/: styles.css
music_app/static/js/: carousel.js
music_app/templates/: base.html  index.html
music_app/users/: forms.py  models.py  services.py  urls.py  views.py
music_app/users/migrations/: 0001_initial.py  0002_user_is_label.py
(+7 files in other folders)
