[project]
name = "music-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-elasticsearch-dsl>=8.0",
    "django-stubs[compatible-mypy]>=5.1.3",
    "elasticsearch>=8.18.0",
    "mongoengine>=0.29.1",
    "mutagen>=1.47.0",
    "pillow>=11.2.1",
    "pymongo>=4.12.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
cache-dir = "/tmp/ruff-cache/"
exclude = [
    "**migrations/",   
    "tests/",          
    "**/__pycache__/", 
    ".venv/",
    "**.mypy_cache",              

]
# Линтинг-настройки
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",      # Докстринги
    "D203",    # Форматирование докстрингов
    "D213",    # Многострочные докстринги
    "FA102",   # Запрещённые импорты
    "COM812"   # Конфликт с форматтером (добавлено в ignore)
]


[tool.ruff.lint.isort]
no-lines-before = [
    "standard-library",
    "local-folder"
]
known-third-party = []
known-local-folder = ["whole_app"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN401",  # Динамические аннотации
    "S101",     # Использование assert
    "S311"      # Псевдослучайные значения
]



[tool.mypy]

plugins = ["mypy_django_plugin.main"]
exclude = "migrations/|tests/"

[tool.django-stubs]
django_settings_module = "music_app.settings"


